tests/integration/security/test_artifacts/security-ae75b8a2494145f8974590/TestMutualTlsOrigination/generic/_test_context/DestinationRule.158735101.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-mtls-credential-generic
spec:
  host: "external.external-4-11206.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          credentialName: mtls-credential-generic
          sni: external.external-4-11206.svc.cluster.local
